[package]
name = "onesignal-rust-api"
version = "2.0.2"
authors = ["devrel@onesignal.com"]
edition = "2018"
description = "A powerful way to send personalized messages at scale and build effective customer engagement strategies. Learn more at onesignal.com"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dev-dependencies]
