[package]
name = "onesignal-rust-api"
version = "2.0.3"
authors = ["devrel@onesignal.com"]
edition = "2021"
description = "A powerful way to send personalized messages at scale and build effective customer engagement strategies. Learn more at onesignal.com"
license = "MIT"

[dependencies]
reqwest = { version = "^0.12.5", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.5"
